<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" android:weightSum="1" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:orientation="vertical">
        <TextView
            android:id="@+id/myTextViewBox"
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"
            android:maxLines="200"
            android:gravity="top"
            android:layout_weight="1"
            android:background="#00BCD4"
            android:text="@string/textView"
         />
        <!--  register button & usrname display -->
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/myUsrNameEditBox"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:background="#8BC34A"
                android:hint="@string/registerText"
                />

             <Button
                 android:id="@+id/myRegisterBtn"
                 android:layout_width="40dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.3"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
                 android:background="#2196F3"
                 android:gravity="center"
                 android:onClick="registerMethod"
                 android:text="@string/register_btn_text" />

             <Button
                 android:id="@+id/myUnRegisterBtn"
                 android:layout_width="40dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.3"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
                 android:background="#2196F3"
                 android:gravity="center"
                 android:onClick="unregisterMethod"
                 android:text="@string/unregister_btn_text" />

             <TextView
                 android:id="@+id/myUsrNameDisplayBox"
                 android:layout_height="fill_parent"
                 android:layout_width="40dp"
                 android:layout_weight="1"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="4dp"
                 android:gravity="center"
                 android:background="#00BCD4"
                 android:text="@string/usrName"
                 />

         </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/myWhoViewBox"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:gravity="center"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:text="@string/who_view_text" />

            <Button
                android:id="@+id/myWhoBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:background="#2196F3"
                android:gravity="center"
                android:onClick="whoMethod"
                android:text="@string/who_btn_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/myEditTextBox"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="4dp"
                android:background="#8BC34A"
                android:hint="@string/editText"
                />

            <Button
                android:id="@+id/mySendBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:background="#2196F3"
                android:gravity="center"
                android:onClick="sendMethod"
                android:text="@string/send" />

            <Button
                android:id="@+id/myInviteBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:background="#2196F3"
                android:gravity="center"
                android:onClick="inviteMethod"
                android:text="@string/invite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/myKillBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:background="#D30909"
                android:gravity="center"
                android:onClick="killMethod"
                android:text="@string/kill" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>